<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:layout_height="match_parent">

    <TextView
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/open"
        android:layout_alignParentRight="true"
        android:src="@mipmap/open"
        android:layout_marginRight="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp" />
    <TextView
        android:layout_below="@id/open"
        android:text="@string/open"
        android:textSize="7sp"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/get_account"
        android:layout_marginTop="100dp"
        android:layout_below="@id/open"
        android:textSize="20sp"
        android:text="@string/get_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/get_status"
        android:text="@string/get_status"
        android:textSize="20sp"
        android:layout_below="@id/get_account"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/isWork"
        android:layout_below="@id/get_status"
        android:text="@string/iswork"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tips"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/isWork"
        android:text="@string/tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_below="@id/tips"
        android:layout_marginTop="10dp"
        android:text="@string/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>