<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/weChatSession"
        android:layout_margin="20dp"
        android:hint="@string/weChatSession"
        android:lines="1"
        android:textSize="16dp"
        android:singleLine="true"
        android:gravity="center"
        android:background="@drawable/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/start"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/weChatSession"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/but"
        android:text="@string/start"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:id="@+id/introduce"
        android:layout_below="@id/start"
        android:text="@string/introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:padding="2dp"
        android:id="@+id/introduce_text"
        android:text="@string/introduce_text"
        android:layout_below="@id/introduce"
        android:layout_marginRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/start_result"
        android:layout_below="@id/introduce_text"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:text="@string/start_result"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/response"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/start_result"
        android:text="@string/response"
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>