<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/search_look"
        android:text="@string/search_look"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:background="#00000000"
        android:id="@+id/search_result"
        android:textColor="#acacac"
        android:text="@string/rearch_result"
        android:layout_below="@id/search_look"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_below="@id/search_result"
        android:id="@+id/search_title"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_alignParentLeft="true"
            android:text="@string/search_account"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_centerHorizontal="true"
            android:text="@string/search_seat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignParentRight="true"
            android:text="@string/search_time"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <ListView
        android:id="@+id/result"
        android:layout_marginLeft="16dp"
        android:paddingTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/search_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</RelativeLayout>